--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,11 @@ h2 {
     position: relative;
     display: flex;
 }
+
+.input-field {
+    width: 100%;
+    border: 0.06rem solid #d2d2d2bf;
+    border-radius: 0.5rem;
+    padding: 1.25rem;
+    font-size: 1rem;
+}
